// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render error common switch 1`] = `
<div>
  <div>
    <div
      class="commonSwitch"
    >
      <label
        class="MuiFormControlLabel-root controlLabel"
        data-testid="common-switch"
      >
        <span
          class="MuiSwitch-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-152 MuiSwitch-switchBase MuiSwitch-colorSecondary error PrivateSwitchBase-checked-153 Mui-checked error"
          >
            <span
              class="MuiIconButton-label"
            >
              <span
                class="MuiSwitch-thumb"
              />
              <input
                checked=""
                class="PrivateSwitchBase-input-155 MuiSwitch-input"
                id=""
                type="checkbox"
                value=""
              />
            </span>
          </span>
          <span
            class="MuiSwitch-track errorBar"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label error MuiTypography-body1"
        />
      </label>
      
    </div>
  </div>
</div>
`;

exports[`render primary common switch 1`] = `
<div>
  <div>
    <div
      class="commonSwitch"
    >
      <label
        class="MuiFormControlLabel-root controlLabel"
        data-testid="common-switch"
      >
        <span
          class="MuiSwitch-root"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-18 MuiSwitch-switchBase MuiSwitch-colorPrimary"
          >
            <span
              class="MuiIconButton-label"
            >
              <span
                class="MuiSwitch-thumb"
              />
              <input
                class="PrivateSwitchBase-input-21 MuiSwitch-input"
                id=""
                type="checkbox"
                value="test"
              />
            </span>
          </span>
          <span
            class="MuiSwitch-track"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          Primary
        </span>
      </label>
      <p
        class="MuiFormHelperText-root switchHelperText"
      >
        test switch
      </p>
    </div>
  </div>
</div>
`;
